// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HintBlock display complex content 1`] = `
<div
  class="hint-block-pf"
>
  <div
    class="hint-block-pf-title"
  >
    <div>
      My Custom 
      <b>
        Title
      </b>
    </div>
  </div>
  <div
    class="hint-block-pf-body"
  >
    <div>
      <p>
        This pattern does not yet exist in 
        <a
          href="http://www.patternfly.org/pattern-library/"
        >
          PatternFly
        </a>
        .
      </p>
      The 
      <b>
        Hint Block
      </b>
       pattern is similar to an informational inline notification, but with additional emphasis (blue highlight). The intention is to use this for specific use cases involving new users, new features, or cases where extra guidance may assist in successfully completing a flow. The hint pattern involves a one-step reminder, explanation, or call to action. Potential Use Cases
      <ul>
        <li>
          To provide guidance to 
          <b>
            new users
          </b>
           who do not know how to use the application
        </li>
        <li>
          To provide contextual help on using 
          <b>
            new features
          </b>
        </li>
        <li>
          To provide hints on a flow/ the 
          <b>
            next steps
          </b>
           a user should be thinking about.
        </li>
      </ul>
    </div>
  </div>
  <button
    class="btn btn-primary"
    type="button"
  >
    <span>
      <span
        aria-hidden="true"
        class="pficon pficon-help"
      />
       Optional Action
    </span>
  </button>
</div>
`;

exports[`HintBlock displays correctly 1`] = `
<div
  class="hint-block-pf test-class"
  id="test-id"
>
  <button
    aria-hidden="true"
    aria-label="Close"
    class="close"
    type="button"
  >
    <span
      class="pficon pficon-close"
    />
  </button>
  <div
    class="hint-block-pf-title"
  >
    Test Title Text
  </div>
  <div
    class="hint-block-pf-body"
  >
    Test Body Text
  </div>
  <button
    class="btn btn-primary"
    type="button"
  >
    <span>
      <span
        aria-hidden="true"
        class="pficon pficon-help"
      />
       Optional Action
    </span>
  </button>
</div>
`;

exports[`HintBlock hides close button when no close callback 1`] = `
<div
  class="hint-block-pf"
>
  <div
    class="hint-block-pf-title"
  >
    Test Title Text
  </div>
  <div
    class="hint-block-pf-body"
  >
    Test Body Text
  </div>
  <button
    class="btn btn-primary"
    type="button"
  >
    Optional Action
  </button>
</div>
`;

exports[`HintBlock hides optional button when no button content 1`] = `
<div
  class="hint-block-pf"
>
  <button
    aria-hidden="true"
    aria-label="Close"
    class="close"
    type="button"
  >
    <span
      class="pficon pficon-close"
    />
  </button>
  <div
    class="hint-block-pf-title"
  >
    Test Title Text
  </div>
  <div
    class="hint-block-pf-body"
  >
    Test Body Text
  </div>
</div>
`;
